# djangocms-frontend

./: .coveragerc  .djlint_rules.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .toml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  addon.json  aldryn_config.py  conftest.py  gulpfile.js  package.json  pyproject.toml  run_tests.py  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codecov.yml  codeql-analysis.yml  codeql.yml  dependabot.yml  djlint.yml  docs.yml  lint-pr.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml
.tx/: config  transifex.yaml
djangocms_frontend/: __init__.py  apps.py  cms_plugins.py  component_base.py  component_pool.py  fields.py  helpers.py  models.py  plugin_tag.py  pool.py  render.py  settings.py  ui_plugin_base.py
djangocms_frontend/common/: __init__.py  attributes.py  background.py  responsive.py  sizing.py  spacing.py  title.py
djangocms_frontend/common/bootstrap5/: attributes.py  background.py  responsive.py  sizing.py  spacing.py
djangocms_frontend/common/tailwind/: spacing.py
djangocms_frontend/contrib/accordion/: cms_plugins.py  forms.py  models.py
djangocms_frontend/contrib/alert/: cms_plugins.py  forms.py  models.py
djangocms_frontend/contrib/auto_component/: apps.py
djangocms_frontend/contrib/badge/: cms_plugins.py  forms.py  models.py
djangocms_frontend/contrib/card/: cms_plugins.py  constants.py  forms.py  models.py
djangocms_frontend/contrib/carousel/: cms_plugins.py  constants.py  forms.py  models.py
djangocms_frontend/contrib/collapse/: cms_plugins.py  forms.py  models.py
djangocms_frontend/contrib/component/: cms_plugins.py  components.py  models.py  registry.py
djangocms_frontend/contrib/contact_form/: cms_plugins.py  forms.py
djangocms_frontend/contrib/content/: cms_plugins.py  constants.py  forms.py  models.py
djangocms_frontend/contrib/forms/: __init__.py  actions.py  cms_plugins.py  constants.py  entry_model.py  forms.py  models.py  recaptcha.py  urls.py  views.py
djangocms_frontend/contrib/frontend_forms/: admin.py  (+8 more)
djangocms_frontend/frameworks/: bootstrap5.py  foundation6.py  tailwind.py
djangocms_frontend/frontends/: bootstrap5.py  foundation.py  foundation6.py
djangocms_frontend/management/: bootstrap4_migration.py  icon_migration.py  styled_link_migration.py
djangocms_frontend/migrations/: 0001_initial.py  0002_migrate_links.py  0003_slotmodel.py
djangocms_frontend/templates/: bootstrap5.html  djangocms_frontend.html  materialio.html
djangocms_frontend/templatetags/: cms_component.py  frontend.py
doc/: home.rst
docs/: Makefile  components.rst  conf.py  forms.rst  getting_started.rst  grid.rst  home.rst  howto.rst  howto_guides.rst  index.rst  reference.rst  requirements.in  requirements.txt
docs/source/: cms_v4.rst  components.rst  conf.py  custom_components.rst  forms.rst  getting_started.rst  grid.rst  howto_guides.rst  index.rst  reference.rst  spelling_wordlist.txt
examples/: cms_components.py
private/js/: base.js  grid.js  link.js  utilities.js  webpack.config.js
private/sass/: _import_bootstrap.scss  base.scss  bootstrap5.scss  button_group.scss  select2.scss
tests/: fixtures.py  helpers.py  settings.py  test_advanced_settings.py  test_autocomponent.py  test_component_examples.py  test_component_nesting.py  test_constants.py  test_doc_examples.py  test_fields.py  test_frontend_templatetags.py  test_helpers.py  test_migrations.py  test_n_plus_one.py  test_plugin_tag.py  test_rename.py  test_responsive.py  test_settings.py  test_spacing.py  test_templatetag_helpers.py  urls.py
tests/accordion/: test_models.py  test_plugins.py
tests/alert/: test_models.py  test_plugins.py
tests/badge/: test_models.py  test_plugins.py
tests/bootstrap5_alert/: test_models.py  test_plugins.py
tests/bootstrap5_badge/: test_models.py  test_plugins.py
tests/bootstrap5_card/: test_models.py  test_plugins.py
tests/bootstrap5_carousel/: test_models.py  test_plugins.py
tests/bootstrap5_collapse/: test_models.py  test_plugins.py
tests/bootstrap5_content/: test_models.py  test_plugins.py
tests/bootstrap5_grid/: test_models.py  test_plugins.py
tests/bootstrap5_jumbotron/: test_models.py  test_plugins.py
tests/bootstrap5_link/: test_models.py  test_plugins.py
tests/bootstrap5_listgroup/: test_models.py  test_plugins.py
tests/bootstrap5_media/: test_models.py  test_plugins.py
tests/bootstrap5_picture/: test_models.py  test_plugins.py
tests/bootstrap5_tabs/: test_models.py  test_plugins.py
tests/bootstrap5_utilities/: test_models.py  test_plugins.py
tests/card/: test_models.py  test_plugins.py
tests/carousel/: test_models.py  test_plugins.py
tests/collapse/: test_models.py  test_plugins.py
tests/component/: test_checks.py  test_models.py  test_plugins.py
tests/content/: test_models.py  test_plugins.py
tests/frontend_forms/: test_formeditor.py  test_models.py
tests/grid/: test_forms.py  test_models.py  test_plugins.py
tests/icon/: test_models.py  test_plugins.py  test_templatetags.py
tests/image/: test_drag_n_drop.py  test_models.py  test_plugins.py
tests/jumbotron/: test_models.py  test_plugins.py
tests/link/: test_helpers.py  test_migration.py  test_models.py  test_plugins.py  test_urlconf.py
tests/listgroup/: test_models.py  test_plugins.py
tests/media/: test_models.py  test_plugins.py
tests/modal/: test_models.py  test_plugins.py
tests/navigation/: test_models.py  test_plugins.py
tests/picture/: test_models.py  test_plugins.py
tests/requirements/: base.txt  dj22_cms38.txt  dj22_cms39.txt  dj32_cms310.txt  dj32_cms37.txt  dj32_cms38.txt  dj32_cms39.txt  dj32_cms40.txt  dj32_cms41.txt  dj40_cms311.txt  dj40_cms41.txt  dj41_cms311.txt  dj41_cms41.txt  dj42_cms311.txt  dj42_cms41.txt  dj50_cms41.txt  dj51_cms41.txt  dj52_cms50.txt  dj52_cms51.txt  dj60_cms50.txt  dj60_cms51.txt
tests/tabs/: test_models.py  test_plugins.py
tests/templates/: page.html
tests/test_app/: cms_components.py
tests/utilities/: test_models.py  test_plugins.py
tools/tasks/: sass.js
(+397 files in other folders)
