[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "setuptools-scm" ]

[project]
name = "djangocms-frontend"
description = "Adds abstract User Interface items as plugins to django CMS."
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
  { name = "Fabian Braun", email = "fsbraun@gmx.de" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django CMS",
  "Framework :: Django CMS :: 3.11",
  "Framework :: Django CMS :: 4.1",
  "Framework :: Django CMS :: 5.0",
  "Framework :: Django CMS :: 5.1",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "django-cms>=3.7",
  "django-entangled>=0.6",
  "django-filer>=1.7",
  "djangocms-attributes-field>=4",
  "djangocms-link>=5",
  "easy-thumbnails",
]
optional-dependencies.cms-3 = [
  "django-cms<4",
  "django-parler",
  "djangocms-link>=5",
  "djangocms-text",
]
optional-dependencies.cms-4 = [
  "django-cms>=4.1",
  "django-parler",
  "djangocms-alias>=2",
  "djangocms-link>=5",
  "djangocms-text",
  "djangocms-versioning>=2",
]
optional-dependencies.djangocms-icon = [
  "djangocms-icon>=1.4",
]
optional-dependencies.static-ace = [
  "djangocms-static-ace",
]
urls."Release notes" = "https://github.com/django-cms/djangocms-frontend/blob/master/CHANGELOG.rst"
urls.Documentation = "https://djangocms-frontend.readthedocs.io"
urls.Issues = "https://github.com/django-cms/djangocms-frontend/issues"
urls.Source = "https://github.com/django-cms/djangocms-frontend"

[tool.setuptools]
packages = [ "djangocms_frontend" ]
package-data.djangocms_frontend = [ "LICENSE", "locale/**/*", "README.rst", "static/**/*", "templates/**/*" ]
package-data.exclude = [ "**/bundles/" ]
dynamic.version = { attr = "djangocms_frontend.__version__" }

[tool.black]
exclude = """  .git
  .hg
  .tox
  venv
  .venv
  _build
  build
  dist
"""

[tool.djlint]
profile = "django"
ignore = "H023,T003,H006,H031,D018,H021,H025"
rule.flags = "re.DOTALL|re.I"
rule.message = '.pk or .id should only be used with "|unlocalize"'
rule.name = "D034"
rule.patterns = [
  "{{\\s*[a-zA-Z0-9_.]+\\.pk\\s*}}",
  "{{\\s*[a-zA-Z0-9_.]+\\.id\\s*}}",
]

[tool.ruff]
line-length = 119
exclude = [
  "**/migrations/**",
  ".env",
  ".venv",
]
lint.select = [
  "E",
  "F",
  "I",
  "W",
]
lint.ignore = [
  "E501", # line too long
  "E701", # multiple statements on one line (colon)
  "F401", # module imported but unused
  "F403", # 'from module import *' used; unable to detect undefined names
]

[tool.isort]
line_length = 119
multi_line_output = 5
include_trailing_comma = true
lines_after_imports = 2
sections = [
  "FUTURE",
  "STDLIB",
  "DJANGO",
  "CMS",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
default_section = "THIRDPARTY"
known_first_party = "djangocms_link"
skip = [
  "*migrations*",
  ".eggs",
  ".env",
  ".tox",
  ".venv",
  "data",
  "manage.py",
]
known_cms = [ "cms", "menus" ]
known_django = "django"

[tool.flake8]
max-line-length = 120
select = [
  "C",
  "E",
  "F",
  "W",
  "B",
  "B950",
]
ignore = [
  "W503", # line break before binary operator
]
exclude = [
  "*.egg-info",
  ".eggs",
  ".env",
  ".git",
  ".settings",
  ".tox",
  ".venv",
  "build",
  "data",
  "dist",
  "docs",
  "*migrations*",
  "requirements",
  "tmp",
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ "." ]
ini_options.python_files = [ "*_test.py", "test_*.py" ]
ini_options.DJANGO_SETTINGS_MODULE = "tests.test_settings"

[tool.coverage]
run.branch = true
run.omit = [
  "*/foundation6.py",
  "djangocms_frontend/management/*",
  "djangocms_frontend/migrations/*",
  "tests/*",
]
run.source = [ "djangocms_frontend" ]
report.exclude_lines = [
  "def __repr__",
  "if __name__ == .__main__.:",
  "if 0:",
  "if self.debug:",
  "if settings.DEBUG",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
]
report.ignore_errors = true
